--- a/tasma/package-manager/po/nl.po
+++ b/tasma/package-manager/po/nl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 16:20+0200\n"
-"PO-Revision-Date: 2007-02-25 20:39+0200\n"
+"PO-Revision-Date: 2007-03-01 21:34+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -45,7 +45,7 @@ msgstr "Installeert nu <b>amsn</b> pakket"
 
 #: src/Tray.py:39
 msgid "Update"
-msgstr "Bijwerken"
+msgstr "Update"
 
 #: src/Tray.py:44 src/package-manager.py:273 src/package-manager.py:662
 #: src/package-manager.py:809
@@ -263,7 +263,7 @@ msgstr "Auteurs van PiSi API"
 
 #: src/package-manager.py:113
 msgid "Search: "
-msgstr "Zoeken: "
+msgstr "Zoek: "
 
 # mand tonen
 #: src/package-manager.py:117
